--- a/eas.json
+++ b/eas.json
@@ -14,5 +14,15 @@
   },
   "submit": {
     "production": {}
+  },
+"build": {
+    "production": {
+      "android": {
+        "image": "latest"
+      },
+      "ios": {
+        "image": "latest"
+      }
+},
   }
 }
